# chrono-instruct-replication

./: .gitignore  README.md  pyproject.toml
archive/: README.md
configs/: eval.yaml  train.yaml  train_s1.yaml
docs/: env-setup.md  implementation-notes.md  running-guide.md
docs/brainstorms/: 2026-06-16-chrono-instruct-replication-requirements.md
docs/guides/: 01-environment-setup.md  02-training-the-models.md  03-figures-1-2-loss-curves.md  04-table-2-president-consistency.md  05-table-3-major-events.md  06-figure-3-alpacaeval.md  README.md
docs/walkthrough/: 00-overview.md  01-ml-primer.md  02-paper-and-research-framing.md  03-model.md  04-data.md  05-train.md  06-infer-and-eval.md  07-cli-tracking-hub-figures.md  08-configs-scripts-infra.md  09-context-window.md
notebooks/: test_instruct.ipynb  verify_pipeline.ipynb
results/: README.md
results/chrono-instruct-1999/: alpaca_1999.json  config.yaml  eval.json  metrics.csv  summary.json
results/chrono-instruct-2005/: alpaca_2005.json  config.yaml  eval.json  metrics.csv  summary.json
results/chrono-instruct-2010/: alpaca_2010.json  config.yaml  eval.json  metrics.csv  summary.json
results/chrono-instruct-2015/: alpaca_2015.json  config.yaml  eval.json  metrics.csv  summary.json
results/chrono-instruct-2020/: alpaca_2020.json  config.yaml  eval.json  metrics.csv  summary.json
scripts/: aggregate_eval.py  eval_all_vintages.sh  full_eval.py  inference_demo.py  lambda_setup.sh  launch_local.sh  make_vintage_config.py  model_card_template.md  notify_email.py  plot_sweep_combined.py  publish_results.sh  push_model_cards.py  run_eval.py  score_alpaca.py  slurm_array.sbatch  train_all_vintages.sh
tests/: test_smoke.py
(+30 files in other folders)
