[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chrono-instruct"
version = "0.0.1"
description = "A clean replication of the Instruct ChronoGPT supervised-finetuning pipeline."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4",
    "datasets>=2.18",
    "tiktoken>=0.6",
    "huggingface-hub>=0.23",
    "pyyaml>=6.0",
    "numpy",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]
viz = ["matplotlib>=3.7", "wandb>=0.16"]                       # figures + optional W&B
eval = ["alpaca-eval>=0.6", "transformers>=4.40", "accelerate>=0.30"]  # Figure 3

[project.scripts]
chrono = "chrono_instruct.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110

[tool.pytest.ini_options]
pythonpath = ["src"]
